pub: KRAS comutation pub

--- a/content/publication/tissue-specific-oncogenic-activity-of-krasA146T/cite.bib
+++ b/content/publication/tissue-specific-oncogenic-activity-of-krasA146T/cite.bib
@@ -1,16 +1,17 @@
-@article{Poulin2019,
-abstract = {KRAS is the most frequently mutated oncogene. The incidence of specific KRAS alleles varies between cancers from different sites, but it is unclear whether allelic selection results from biological selection for specific mutant KRAS proteins. We used a cross-disciplinary approach to compare KRASG12D, a common mutant form, and KRASA146T, a mutant that occurs only in selected cancers. Biochemical and structural studies demonstrated that KRASA146T exhibits a marked extension of switch 1 away from the protein body and nucleotide binding site, which activates KRAS by promoting a high rate of intrinsic and guanine nucleotide exchange factor-induced nucleotide exchange. Using mice genetically engineered to express either allele, we found that KRASG12D and KRASA146T exhibit distinct tissue-specific effects on homeostasis that mirror mutational frequencies in human cancers. These tissue-specific phenotypes result from allele-specific signaling properties, demonstrating that context-dependent variations in signaling downstream of different KRAS mutants drive the KRAS mutational pattern seen in cancer. SIGNIFICANCE: Although epidemiologic and clinical studies have suggested allele-specific behaviors for KRAS, experimental evidence for allele-specific biological properties is limited. We combined structural biology, mass spectrometry, and mouse modeling to demonstrate that the selection for specific KRAS mutants in human cancers from different tissues is due to their distinct signaling properties.See related commentary by Hobbs and Der, p. 696.This article is highlighted in the In This Issue feature, p. 681.},
-author = {Poulin, Emily J and Bera, Asim K and Lu, Jia and Lin, Yi-Jang and Strasser, Samantha Dale and Paulo, Joao A and Huang, Tannie Q and Morales, Carolina and Yan, Wei and Cook, Joshua and Nowak, Jonathan A and Brubaker, Douglas K and Joughin, Brian A and Johnson, Christian W and DeStefanis, Rebecca A and Ghazi, Phaedra C and Gondi, Sudershan and Wales, Thomas E and Iacob, Roxana E and Bogdanova, Lana and Gierut, Jessica J and Li, Yina and Engen, John R and Perez-Mancera, Pedro A and Braun, Benjamin S and Gygi, Steven P and Lauffenburger, Douglas A and Westover, Kenneth D and Haigis, Kevin M},
-doi = {10.1158/2159-8290.CD-18-1220},
-file = {:Users/admin/Documents/Mendeley Desktop/2019 - Poulin et al. - Cancer Discov - Tissue-Specific Oncogenic Activity of KRAS A146T Allele-and Tissue-Specific KRAS Function.pdf:pdf},
-issn = {2159-8290},
-journal = {Cancer discovery},
-month = {jun},
-number = {6},
-pages = {738--755},
-pmid = {30952657},
-title = {{Tissue-Specific Oncogenic Activity of KRASA146T.}},
-url = {www.aacrjournals.org http://www.ncbi.nlm.nih.gov/pubmed/30952657 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC6548671},
-volume = {9},
-year = {2019}
+@article{
+    Poulin2019,
+    abstract = {KRAS is the most frequently mutated oncogene. The incidence of specific KRAS alleles varies between cancers from different sites, but it is unclear whether allelic selection results from biological selection for specific mutant KRAS proteins. We used a cross-disciplinary approach to compare KRASG12D, a common mutant form, and KRASA146T, a mutant that occurs only in selected cancers. Biochemical and structural studies demonstrated that KRASA146T exhibits a marked extension of switch 1 away from the protein body and nucleotide binding site, which activates KRAS by promoting a high rate of intrinsic and guanine nucleotide exchange factor-induced nucleotide exchange. Using mice genetically engineered to express either allele, we found that KRASG12D and KRASA146T exhibit distinct tissue-specific effects on homeostasis that mirror mutational frequencies in human cancers. These tissue-specific phenotypes result from allele-specific signaling properties, demonstrating that context-dependent variations in signaling downstream of different KRAS mutants drive the KRAS mutational pattern seen in cancer. SIGNIFICANCE: Although epidemiologic and clinical studies have suggested allele-specific behaviors for KRAS, experimental evidence for allele-specific biological properties is limited. We combined structural biology, mass spectrometry, and mouse modeling to demonstrate that the selection for specific KRAS mutants in human cancers from different tissues is due to their distinct signaling properties.},
+    author = {Poulin, Emily J and Bera, Asim K and Lu, Jia and Lin, Yi-Jang and Strasser, Samantha Dale and Paulo, Joao A and Huang, Tannie Q and Morales, Carolina and Yan, Wei and Cook, Joshua and Nowak, Jonathan A and Brubaker, Douglas K and Joughin, Brian A and Johnson, Christian W and DeStefanis, Rebecca A and Ghazi, Phaedra C and Gondi, Sudershan and Wales, Thomas E and Iacob, Roxana E and Bogdanova, Lana and Gierut, Jessica J and Li, Yina and Engen, John R and Perez-Mancera, Pedro A and Braun, Benjamin S and Gygi, Steven P and Lauffenburger, Douglas A and Westover, Kenneth D and Haigis, Kevin M},
+    doi = {10.1158/2159-8290.CD-18-1220},
+    file = {https://cancerdiscovery.aacrjournals.org/content/9/6/738.long},
+    issn = {2159-8290},
+    journal = {Cancer Discovery},
+    month = {jun},
+    number = {6},
+    pages = {738--755},
+    pmid = {30952657},
+    title = {{Tissue-Specific Oncogenic Activity of KRASA146T.}},
+    url = {www.aacrjournals.org http://www.ncbi.nlm.nih.gov/pubmed/30952657 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC6548671},
+    volume = {9},
+    year = {2019}
 }
